Add tests, clean up the code